fixed text disappearing on narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-html,body{
-    height:100%;    
+html,body{  
     margin:0;
     padding:0;
 }
@@ -22,11 +21,17 @@ body {
   .adaptwidth {
     width: 90%;
   }
+
+
 }
 
 @media only screen and (min-width: 600px) {
   .adaptwidth {
     width: 50%;
+  }
+
+  html,body {
+    height:100%;  
   }
 }
 
